# pyscoreboard

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pyscoreboard/: __main__.py  app.py  scoreboard.py  scoreboard_test.py  test_scoreboard.py  tui.py
