[project]
name = "pyscoreboard"
version = "0.1.0"
description = "A scoreboard for your terminal"
authors = [
    { name = "sjahl", email = "636687+sjahl@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
pyscoreboard = "pyscoreboard.app:run"
