[project]
name = "pyscoreboard"
version = "0.1.0"
description = "A scoreboard for your terminal"
authors = [
    { name = "sjahl" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "textual>=6.6.0",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
]

[project.scripts]
pyscoreboard = "pyscoreboard.app:run"
pyscoreboard-tui = "pyscoreboard.tui:main"
